@@ -1,14 +1,15 @@
 package kitchenpos.application;
 
+import static kitchenpos.domain.OrderStatus.COMPLETION;
+import static kitchenpos.domain.OrderStatus.COOKING;
+import static kitchenpos.domain.OrderStatus.MEAL;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import kitchenpos.dao.OrderDao;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuGroupRepository;
@@ -16,6 +17,7 @@ import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.MenuRepository;
 import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
+import kitchenpos.domain.OrderRepository;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.OrderTableRepository;
 import kitchenpos.domain.Product;
@@ -28,7 +30,7 @@ class OrderServiceTest extends ServiceTest {
     private OrderService orderService;
 
     @Autowired
-    protected OrderDao orderDao;
+    protected OrderRepository orderRepository;
 
     @Autowired
     private ProductRepository productRepository;
@@ -53,23 +55,22 @@ class OrderServiceTest extends ServiceTest {
         MenuProduct menuProduct2 = new MenuProduct(1L, null, product2.getId(), 2);
 
         Menu menu1 = menuRepository.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup,
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+                List.of(menuProduct1, menuProduct2)));
         Menu menu2 = menuRepository.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup,
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+                List.of(menuProduct1, menuProduct2)));
 
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
         OrderLineItem orderLineItem1 = new OrderLineItem(null, menu1.getId(), 1);
         OrderLineItem orderLineItem2 = new OrderLineItem(null, menu2.getId(), 2);
 
-        Order order = new Order(orderTable.getId(), null,
-                new ArrayList<>(Arrays.asList(orderLineItem1, orderLineItem2)));
+        Order order = new Order(orderTable, COOKING, List.of(orderLineItem1, orderLineItem2));
 
         Order actual = orderService.create(order);
 
         assertAll(() -> {
             assertThat(actual.getId()).isNotNull();
-            assertThat(actual.getOrderStatus()).isEqualTo("COOKING");
+            assertThat(actual.getOrderStatus()).isEqualTo(COOKING);
             assertThat(actual.getOrderLineItems()).hasSize(2);
         });
     }
@@ -78,7 +79,7 @@ class OrderServiceTest extends ServiceTest {
     void 주문_항목이_비어있는_경우_주문을_생성할_수_없다() {
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order order = new Order(orderTable.getId(), null, new ArrayList<>());
+        Order order = new Order(orderTable, COOKING, new ArrayList<>());
 
         assertThatThrownBy(() -> orderService.create(order)).isInstanceOf(IllegalArgumentException.class);
     }
@@ -94,17 +95,16 @@ class OrderServiceTest extends ServiceTest {
         MenuProduct menuProduct2 = new MenuProduct(1L, null, product2.getId(), 2);
 
         Menu menu1 = menuRepository.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup,
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+                List.of(menuProduct1, menuProduct2)));
         Menu menu2 = menuRepository.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup,
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+                List.of(menuProduct1, menuProduct2)));
 
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, true));
 
         OrderLineItem orderLineItem1 = new OrderLineItem(null, menu1.getId(), 1);
         OrderLineItem orderLineItem2 = new OrderLineItem(null, menu2.getId(), 2);
 
-        Order order = new Order(orderTable.getId(), null,
-                new ArrayList<>(Arrays.asList(orderLineItem1, orderLineItem2)));
+        Order order = new Order(orderTable, COOKING, List.of(orderLineItem1, orderLineItem2));
 
         assertThatThrownBy(() -> orderService.create(order)).isInstanceOf(IllegalArgumentException.class);
     }
@@ -113,11 +113,11 @@ class OrderServiceTest extends ServiceTest {
     void 전체_주문_목록을_조회할_수_있다() {
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order order1 = new Order(orderTable.getId(), "COOKING", new ArrayList<>());
-        Order order2 = new Order(orderTable.getId(), "COOKING", new ArrayList<>());
+        Order order1 = new Order(orderTable, COOKING, new ArrayList<>());
+        Order order2 = new Order(orderTable, COOKING, new ArrayList<>());
 
-        orderDao.save(order1);
-        orderDao.save(order2);
+        orderRepository.save(order1);
+        orderRepository.save(order2);
 
         List<Order> actual = orderService.list();
 
@@ -128,22 +128,22 @@ class OrderServiceTest extends ServiceTest {
     void 주문_상태를_변경할_수_있다() {
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order order = orderDao.save(new Order(orderTable.getId(), "COOKING", new ArrayList<>()));
-        Order newOrder = orderDao.save(new Order(orderTable.getId(), "MEAL", new ArrayList<>()));
+        Order order = orderRepository.save(new Order(orderTable, COOKING, new ArrayList<>()));
+        Order newOrder = orderRepository.save(new Order(orderTable, MEAL, new ArrayList<>()));
 
         Order actual = orderService.changeOrderStatus(order.getId(), newOrder);
 
-        assertThat(actual.getOrderStatus()).isEqualTo("MEAL");
+        assertThat(actual.getOrderStatus()).isEqualTo(MEAL);
     }
 
     @Test
     void 기존_주문_상태가_계산_완료_상태인_경우_상태를_변경할_수_없다() {
         OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order order = orderDao.save(new Order(orderTable.getId(), "COMPLETION", new ArrayList<>()));
-        Order newOrder = orderDao.save(new Order(orderTable.getId(), "MEAL", new ArrayList<>()));
+        Order order = orderRepository.save(new Order(orderTable, COMPLETION, new ArrayList<>()));
+        Order newOrder = orderRepository.save(new Order(orderTable, MEAL, new ArrayList<>()));
 
-        assertThatThrownBy(() -> orderService.changeOrderStatus(order.getId(), newOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.changeOrderStatus(order.getId(), newOrder)).isInstanceOf(
+                IllegalArgumentException.class);
     }
 }
